--- a/proyecto.html
+++ b/proyecto.html
@@ -118,7 +118,8 @@
           los datos científicos de la geografía matemática o alejandrina (las mediciones y observaciones que permiten
           posicionar tanto la toponimia mítica de Homero como la contemporánea de época imperial romana) se confrontarán
           con la información de la <em>Ilíada</em> y la <em>Odisea</em>, cuya veracidad no se pone en duda, al
-          contrario, necesita ser fundamentada.</p>
+          contrario, necesita ser fundamentada.
+        </p>
         <p class="resto">Cuando Dionisio de Alejandría, un maestro de época de Adriano, compone la <em>Periégesis</em>,
           un breve poema geográfico de poco más de 1100 hexámetros (el metro de los versos homéricos), la geografía de
           Homero ya se había convertido en el telón de fondo difuso de un conocimiento organizado en el espacio gracias
@@ -207,7 +208,8 @@
                       title="Association Internationale des Études Byzantines">AIEB</abbr> y desde 2017 presidente de la
                     <a href="https://bizantinistica.blogspot.com/"
                       title="Al hacer clic se abrirá una nueva pestaña en su navegador" target="_blank">Sociedad
-                      Española de Bizantinística</a>.</p>
+                      Española de Bizantinística</a>.
+                  </p>
                 </div>
                 <div class="perfil">
                   <small><a href="https://ajif-ucm.academia.edu/juansignescodo%C3%B1er"
@@ -337,7 +339,8 @@
                 18-20 de noviembre de 2021).</p>
               <p>Viaje de investigación de Carmen García Bueno a París para consultar microfilmes y manuscritos en el
                 <abbr title="Institut de Recherche et d'Histoire des Textes">IRHT</abbr> y la <abbr
-                  title="Bibliothèque nationale de France">BnF</abbr> (29 de noviembre - 3 de diciembre de 2021).</p>
+                  title="Bibliothèque nationale de France">BnF</abbr> (29 de noviembre - 3 de diciembre de 2021).
+              </p>
             </div>
           </div>
           <div class="timeline-container timeline-left">
@@ -353,11 +356,19 @@
               <p>Comunicación de Paula Caballero Sánchez y Carmen García Bueno en el <span lang="en"><em>24th
                     International Congress of Byzantine Studies</em></span> (Venecia, 23 de agosto de 2022).</p>
             </div>
-            <div class="timeline-container timeline-right">
-              <div class="timeline-content">
-                <h4>2023</h4>
-                <p>Presentación del proyecto en el evento <em>Grandes infraestructuras europeas de <abbr title="Ciencias Sociales">CC. SS.</abbr> y <abbr title="Humanidades Digitales">HH. DD./abbr> en el <abbr title="Consejo Superior de Investigaciones Científicas">CSIC</abbr>: <a href="https://www.dariah.eu/" title="DARIAH = Digital Research Infrastructure for the Arts and Humanities" target="_blank" itemprop="url">DARIAH</a> y <a href="https://www.clarin.eu/" title="CLARIN = Common Language Resources and Technology Infrastructure" target="_blank" itemprop="url">CLARIN</a> en el horizonte</em> (<abbr title="Centro de Ciencias Humanas y Sociales">CCHS</abbr>, Madrid, 11 de mayo de 2023)</p>
-              </div>
+          </div>
+          <div class="timeline-container timeline-right">
+            <div class="timeline-content">
+              <h4>2023</h4>
+              <p>Presentación del proyecto en el evento <em>Grandes infraestructuras europeas de <abbr
+                    title="Ciencias Sociales">CC. SS.</abbr> y <abbr title="Humanidades Digitales">HH. DD./abbr> en el
+                    <abbr title="Consejo Superior de Investigaciones Científicas">CSIC</abbr>: <a
+                      href="https://www.dariah.eu/"
+                      title="DARIAH = Digital Research Infrastructure for the Arts and Humanities" target="_blank"
+                      itemprop="url">DARIAH</a> y <a href="https://www.clarin.eu/"
+                      title="CLARIN = Common Language Resources and Technology Infrastructure" target="_blank"
+                      itemprop="url">CLARIN</a> en el horizonte</em> (<abbr
+                  title="Centro de Ciencias Humanas y Sociales">CCHS</abbr>, Madrid, 11 de mayo de 2023)</p>
             </div>
           </div>
         </div>
@@ -440,7 +451,7 @@
           elvuelodehermes&thinsp;@&thinsp;gmail.com<br>
           <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licencia de Creative Commons"
               style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" class="img-center" /></a>
-              ·2023·
+          ·2023·
         </p>
       </div>
     </div>
