corrección errata código

--- a/proyecto.html
+++ b/proyecto.html
@@ -361,7 +361,7 @@
             <div class="timeline-content">
               <h4>2023</h4>
               <p>Presentación del proyecto en el evento <em>Grandes infraestructuras europeas de <abbr
-                    title="Ciencias Sociales">CC. SS.</abbr> y <abbr title="Humanidades Digitales">HH. DD./abbr> en el
+                    title="Ciencias Sociales">CC. SS.</abbr> y <abbr title="Humanidades Digitales">HH. DD.</abbr> en el
                     <abbr title="Consejo Superior de Investigaciones Científicas">CSIC</abbr>: <a
                       href="https://www.dariah.eu/"
                       title="DARIAH = Digital Research Infrastructure for the Arts and Humanities" target="_blank"
