actualización historial del proyecto

--- a/proyecto.html
+++ b/proyecto.html
@@ -362,13 +362,15 @@
               <h4>2023</h4>
               <p>Presentación del proyecto en el evento <em>Grandes infraestructuras europeas de <abbr
                     title="Ciencias Sociales">CC. SS.</abbr> y <abbr title="Humanidades Digitales">HH. DD.</abbr> en el
-                    <abbr title="Consejo Superior de Investigaciones Científicas">CSIC</abbr>: <a
-                      href="https://www.dariah.eu/"
-                      title="DARIAH = Digital Research Infrastructure for the Arts and Humanities" target="_blank"
-                      itemprop="url">DARIAH</a> y <a href="https://www.clarin.eu/"
-                      title="CLARIN = Common Language Resources and Technology Infrastructure" target="_blank"
-                      itemprop="url">CLARIN</a> en el horizonte</em> (<abbr
-                  title="Centro de Ciencias Humanas y Sociales">CCHS</abbr>, Madrid, 11 de mayo de 2023)</p>
+                  <abbr title="Consejo Superior de Investigaciones Científicas">CSIC</abbr>: <a
+                    href="https://www.dariah.eu/"
+                    title="DARIAH = Digital Research Infrastructure for the Arts and Humanities" target="_blank"
+                    itemprop="url">DARIAH</a> y <a href="https://www.clarin.eu/"
+                    title="CLARIN = Common Language Resources and Technology Infrastructure" target="_blank"
+                    itemprop="url">CLARIN</a> en el horizonte</em> (<abbr
+                  title="Centro de Ciencias Humanas y Sociales">CCHS</abbr>, Madrid, 11 de mayo de 2023)<br />La
+                presentación se puede descargar en <a
+                  href="https://digital.csic.es/handle/10261/308817" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador" target="_blank">DIGITAL.CSIC</a></p>
             </div>
           </div>
         </div>
