--- a/proyecto.html
+++ b/proyecto.html
@@ -370,7 +370,7 @@
                     itemprop="url">CLARIN</a> en el horizonte</em> (<abbr
                   title="Centro de Ciencias Humanas y Sociales">CCHS</abbr>, Madrid, 11 de mayo de 2023)<br />La
                 presentación se puede descargar en <a
-                  href="https://digital.csic.es/handle/10261/308817" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador" target="_blank">DIGITAL.CSIC</a></p>
+                  href="https://digital.csic.es/handle/10261/308817" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador" target="_blank">DIGITAL.CSIC</a>.</p>
             </div>
           </div>
         </div>
