--- a/proyecto.html
+++ b/proyecto.html
@@ -368,9 +368,11 @@
                     itemprop="url">DARIAH</a> y <a href="https://www.clarin.eu/"
                     title="CLARIN = Common Language Resources and Technology Infrastructure" target="_blank"
                     itemprop="url">CLARIN</a> en el horizonte</em> (<abbr
-                  title="Centro de Ciencias Humanas y Sociales">CCHS</abbr>, Madrid, 11 de mayo de 2023)<br />La
-                presentación se puede descargar en <a
-                  href="https://digital.csic.es/handle/10261/308817" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador" target="_blank">DIGITAL.CSIC</a>.</p>
+                  title="Centro de Ciencias Humanas y Sociales">CCHS</abbr>, Madrid, 11 de mayo de 2023)<br />Las
+                diapositivas de la pesentación se puede descargar como archivo <abbr title="Portable Document File">PDF</abbr>
+                en el Repositorio <a href="https://digital.csic.es/handle/10261/308817"
+                  title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador"
+                  target="_blank">DIGITAL.CSIC</a>.</p>
             </div>
           </div>
         </div>
