--- a/proyecto.html
+++ b/proyecto.html
@@ -368,12 +368,16 @@
                     itemprop="url">DARIAH</a> y <a href="https://www.clarin.eu/"
                     title="CLARIN = Common Language Resources and Technology Infrastructure" target="_blank"
                     itemprop="url">CLARIN</a> en el horizonte</em> (<abbr
-                  title="Centro de Ciencias Humanas y Sociales">CCHS</abbr>, Madrid, 11 de mayo de 2023).<br />Las
-                diapositivas de la pesentación se puede descargar como archivo <abbr title="Portable Document File">PDF</abbr>
+                  title="Centro de Ciencias Humanas y Sociales">CCHS</abbr>, Madrid, 11 de mayo de 2023) a cargo de Carmen García Bueno.<br />Las
+                diapositivas de la pesentación se puede descargar como archivo <abbr
+                  title="Portable Document File">PDF</abbr>
                 en el repositorio <a href="https://digital.csic.es/handle/10261/308817"
                   title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador"
                   target="_blank">DIGITAL.CSIC</a>.</p>
-                  <p>Participación de Paula Caballero Sánchez en la <em>Settimana dottorale veneziana</em> (8-12 mayo 2023) del Dottorato in Scienze dell'Antichità de la Universidad Ca'Foscari de Venecia, con una comunicación titulada <em>Fonti e strategie di riscrittura nelle</em> Parekbolai <em>di Eustazio di Tessalonica a Dionisio il Periegeta</em></em></p>
+              <p>Participación de Paula Caballero Sánchez en la <em>Settimana dottorale veneziana</em> (8-12 mayo 2023)
+                del Dottorato in Scienze dell'Antichità de la Universidad Ca'Foscari de Venecia, con una comunicación
+                titulada <em>Fonti e strategie di riscrittura nelle</em> Parekbolai <em>di Eustazio di Tessalonica a
+                  Dionisio il Periegeta</em></em></p>
             </div>
           </div>
         </div>
